# socket-chat-rs

./: .gitignore  README.md
.github/workflows/: build.yml
client/: Cargo.toml
client/src/: client.rs  macros.rs  main.rs  message.rs  model.rs  ui.rs
client/src/ui/: authorization.rs  block.rs  chat.rs  mod.rs  style.rs  util.rs  widgets.rs
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/migrations/: create_tables.sql
server/src/: auth.rs  client.rs  config.rs  db.rs  error.rs  macros.rs  main.rs  server.rs
