[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
serde_json = "1.0.64"
crossterm = { version = "0.19", features = ['event-stream'] }
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
unicode-width = "0.1.8"
termion = "*"
futures = "*"