[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
crossterm = { version = "0.26", features = ['event-stream'] }
tui = { version = "0.19", default-features = false, features = ['crossterm'] }
unicode-width = "0.1.8"
futures = "*"
tokio-util = { version = "0.7.7", features = ["codec"] }
tokio-stream = { version = "0.1.12" }