[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
log = "0.4.17"
simple_logger = "4.1.0"
time = "0.3.20"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
dotenv = "0.15.0"
